--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/sky.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SkyWorld</title>
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@301,400,401,500,501&f[]=general-sans@500&f[]=bespoke-sans@400,500&f[]=rx-100@400&display=swap" rel="stylesheet">
   </head>
   <body>
